# Gstreamer.SomeIP.mediaReader

./: CMakeLists.txt  README.md  audioDevices_manager.cpp  audioDevices_manager.h  bt_manager.cpp  bt_manager.h  device_manager.cpp  device_manager.h  main.cpp  media_manager.cpp  media_manager.h  media_reader.cpp  media_reader.h  someip_service.cpp  someip_service.h  someip_service.json  system_facade.cpp  system_facade.h  usb_manager.cpp  usb_manager.h
